--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "highlight.js": "^11.7.0",
+    "langchain": "^0.0.66",
     "next": "^13.1.1",
     "openai": "^3.0.0",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "@types/react": "^18.0.26",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
   }
